Alterando Alura flix para AluraflixDoflix

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet"
     />
-    <title>Aluraflix</title>
+    <title>AluraflixDoflix</title>
   </head>
 
   <body>
-    <header>ALURAFLIX</header>
+    <header>ALURAFLIXDOFLIX</header>
 
     <section class="chamada">
       <div class="chamada-texto">
