--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
         <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
       </a>
+      <a> <link rel="stylesheet" href="stily.css">
     </div>
   </section>
   
